# KIVY_UI

./: KivyChatUI.spec  PROJECT_DEV_RULES.md  README.md  REFACTORING_PROGRESS.md  buildozer.spec  main.py  plan.md  pyproject.toml  pyrightconfig.json  steps.md
.buildozer/: state.db
.buildozer/android/app/: main.py
.buildozer/android/app/chat_ui/: android_stt.py  config.py  modern_chat.py  theme.py  websocket_client.py
.buildozer/android/app/platform_utils/: android.py
.buildozer/android/platform/build-arm64-v8a/dists/KivyChatUI/: build.gradle  build.xml  dist_info.json
.buildozer/android/platform/build-arm64-v8a/dists/KivyChatUI/src/main/: AndroidManifest.xml
.buildozer/android/platform/build-arm64-v8a/dists/KivyChatUI/src/main/res/values/: strings.xml
.buildozer/android/platform/build-arm64-v8a/dists/simplechat/: AndroidManifest.xml  build.gradle  build.xml  custom_rules.xml  dist_info.json  local.properties
.buildozer/android/platform/build-arm64-v8a/dists/simplechat/src/main/assets/: private.tar
.buildozer/android/platform/build-arm64-v8a/dists/simplechat/src/main/res/values/: strings.xml
.cursor/rules/: kivydevrules.mdc
.github/workflows/: android.yml  linux.yml
HISTORY/: ANDROID_STT_TROUBLESHOOTING.md  PYTHON_313_COMPATIBILITY.md
artefacts/: baseline_tests.txt
chat_ui/: __init__.py  android_stt.py  modern_chat.py  permissions.py  theme.py  websocket_client.py
java/org/kivy/speech/: CallbackWrapper.java  KivyRecognitionListener.java
platform/: __init__.py  android.py  desktop.py
platform_utils/: __init__.py  desktop.py
scripts/: create_pyinstaller_spec.py  kivy_hook.py  sync_spec.py
tests/: __init__.py  test_app_integration.py  test_platform.py
typings/android/: __init__.pyi  permissions.pyi  runnable.pyi
typings/jnius/: __init__.pyi
