[project]
name = "kivymd-chat-ui"
version = "0.1.0"
description = "Modern KivyMD Chat UI Frontend"
authors = [
    {name = "Chat UI Team", email = "team@chatui.com"}
]
dependencies = [
    "kivy==2.3.1",
    "kivymd",
    "websockets==13.1",
    "setuptools>=80.9.0",
    "pip>=25.1.1",
    "buildozer>=1.5.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chat_ui"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = [
    "black>=25.1.0",
    "buildozer==1.5.0",
    "cython==0.29.36",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
] 

[tool.uv.sources]
kivymd = { git = "https://github.com/kivymd/KivyMD.git", branch = "master" }
